--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,6 @@
-<app-pokemon-card></app-pokemon-card>>
+<div class="pokemon-list">
+   <app-pokemon-card></app-pokemon-card>
+   <app-pokemon-card></app-pokemon-card>
+   <app-pokemon-card></app-pokemon-card>
+</div>
+
