--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,5 @@
 <div class="pokemon-list">
-   <app-pokemon-card></app-pokemon-card>
-   <app-pokemon-card></app-pokemon-card>
-   <app-pokemon-card></app-pokemon-card>
+   <app-pokemon-card *ngFor="let pokemon of pokemons"
+   [pokemon]="pokemon"></app-pokemon-card>
 </div>
 
