--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -1,5 +1,5 @@
 <div class="pokemon-list">
-   <app-pokemon-card *ngFor="let pokemon of pokemons"
+   <app-pokemon-card *ngFor="let pokemon of pokemonService.pokemons"
    [pokemon]="pokemon"></app-pokemon-card>
 </div>
 
